[package]
name = "coinbox"
version = "2.0.0"
description = "A multi-chain portfolio intelligence platform"
authors = ["Coinbox Contributors"]
license = "MIT"
repository = "https://github.com/itsyogesh/Coinbox"
edition = "2021"

[lib]
name = "coinbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (bundled-sqlcipher includes both bundled SQLite and SQLCipher encryption)
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# =============================================================================
# Wallet Core Dependencies
# =============================================================================

# Secure storage (IOTA Stronghold)
tauri-plugin-stronghold = "2"

# Memory security - secure erasure of secrets
zeroize = { version = "1", features = ["derive"] }

# BIP39 mnemonic generation and validation
bip39 = "2"

# Secp256k1 key derivation (Bitcoin, Ethereum, Cosmos, Avalanche)
bip32 = "0.5"
coins-bip32 = "0.11"
k256 = { version = "0.13", features = ["ecdsa"] }

# Bitcoin address generation (BIP84 Native SegWit)
bitcoin = { version = "0.32", features = ["secp-recovery"] }

# Ed25519 key derivation (Solana, NEAR)
ed25519-dalek = { version = "2", features = ["rand_core"] }
slip10_ed25519 = "0.1"

# Encoding
bs58 = "0.5"
hex = "0.4"

# Hashing
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"

# Random number generation
rand = "0.8"

# Async traits
async-trait = "0.1"

# Parking lot for better mutex performance
parking_lot = "0.12"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
